<resources>
    <string name="app_name">BeautyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="t1_heading">Easy to Find Customer</string>
    <string name="t2_heading">Branding For Your Parlour </string>
    <string name="t3_heading">Get Customer Feedback</string>
    <string name="t1">Aenean leoigula porttitor eu,consequat vitae eleifend acenimliquam lorem ante dapibus in viverra quis feugiat </string>
    <string name="t2">Aenean leoigula porttitor eu,consequat vitae eleifend acenimliquam lorem ante dapibus in viverra quis feugiat </string>
    <string name="t3">Aenean leoigula porttitor eu,consequat vitae eleifend acenimliquam lorem ante dapibus in viverra quis feugiat </string>

    <string name="next">Next</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="phone_number">Enter phone number</string>
    <string name="password">Enter password</string>
    <string name="retype_password">Confirm password</string>
    <string name="forgot">Forgot password</string>
    <string name="no_account">If you have no an account? <font color='#9A2C92'>Sign Up</font></string>
    <string name="already_account">Already have an account? <font color='#9A2C92'>Sign In</font></string>
    <string name="i_accept">I accept the <font color='#9A2C92'>policy and privacy</font></string>
    <string name="info">General Information</string>
    <string name="parlour_name">Parlour name</string>
    <string name="address">Address</string>
    <string name="otp">One time password</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset">Reset</string>
    <string name="otp_text">We have send you and OTP on your registered number</string>
    <string name="resent">Resend OTP</string>
    <string name="otp_hint">Enter OTP</string>
</resources>