<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".ui.fragments.auth.SignupFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="@dimen/dimen_10"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_100"
        android:background="@drawable/bg_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30"
        android:paddingEnd="@dimen/dimen_30">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/headingH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginTop="@dimen/dimen_30"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatEditText
                style="@style/inputField"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_50" />


            <androidx.appcompat.widget.AppCompatEditText
                style="@style/inputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="11" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <androidx.appcompat.widget.AppCompatCheckBox
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/i_accept" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_50"
            android:text="@string/next" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_signin"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/already_account" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
</layout>