<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".ui.fragments.auth.InfoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="@dimen/dimen_10"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_100"
        android:background="@drawable/bg_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30"
        android:paddingEnd="@dimen/dimen_30">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/headingH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_30"
            android:hint="@string/parlour_name" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/address" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/retype_password"
            android:maxLength="15" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_50"
            android:text="@string/next" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>