<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_splash"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.LaunchFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/headingH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/bg_white_rounded"
        android:text="@string/signin"
        android:textColor="@color/text"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_50"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/bg_white_rounded"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_50"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/dimen_50"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</layout>