<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_splash"
    tools:context=".ui.fragments.auth.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        app:srcCompat="@drawable/ic_back"
        android:padding="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginStart="@dimen/dimen_10"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_100"
        android:background="@drawable/bg_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30"
        android:paddingEnd="@dimen/dimen_30">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/headingH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginTop="@dimen/dimen_30"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/text"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/bg_input"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/dimen_5"
                android:paddingStart="@dimen/dimen_10"
                android:drawableStart="@drawable/pk"
                android:text="+92" />


            <androidx.appcompat.widget.AppCompatEditText
                style="@style/inputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="11" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/inputField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_forgot"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/forgot"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_50"
            android:text="@string/signin" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_signup"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/no_account" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
</layout>