<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        tools:context=".ui.fragments.auth.OtpFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:padding="@dimen/dimen_10"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_100"
            android:background="@drawable/bg_login"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_30"
            android:paddingTop="@dimen/dimen_30"
            android:paddingEnd="@dimen/dimen_30">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/headingH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/otp_text" />

            <com.kevinschildhorn.otpview.OTPView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters|textNoSuggestions"
                app:otp_cursorColor="@color/colorPrimary"
                app:otp_filledTextSize="@dimen/headingH2"
                app:otp_highlightedTextSize="@dimen/headingH2"
                app:otp_itemCount="4"
                android:layout_marginTop="@dimen/dimen_30"
                app:otp_itemHeight="@dimen/dimen_50"
                app:otp_itemWidth="@dimen/dimen_50"
                app:otp_marginBetween="@dimen/dimen_15"
                app:otp_showCursor="true"
                app:otp_textColor="@color/text"
                app:otp_textSize="@dimen/headingH2" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_50"
                android:text="@string/next" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_resend"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/resent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>